added Gimme Card button and functionality

--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="async.js"></script>
+    <style>
+        body {
+            background-color: #458b00;
+        }
+        img { 
+            position: absolute;
+            top: 100px;
+            left: 45%;
+
+            }
+        #content {
+            text-align: center;
+        }
+        button {
+            border-radius: 5px;
+            background-color: #696969;
+            color: #fff;
+            padding: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
-<body>
+<body id="body">
     <div id="content"></div>
 </body>
 
